--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,5 +1,5 @@
 #sidebar {
-  @apply w-[250px] bg-gray-100 border-r border-gray-200;
+  @apply w-[250px] bg-gray-100 border-r border-gray-200 flex-shrink-0;
 }
 
 .user-section {
