style: task list and task item

--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -27,6 +27,36 @@
   @apply flex justify-end items-center gap-1;
 }
 
+/* Task */
+
+.task-view-group{
+  @apply flex flex-col gap-4;
+  @apply px-8 pt-4;
+}
+
+.task-group-section .section-title{
+  @apply font-bold mt-1;
+}
+
+
+.task-line {
+  @apply flex items-center gap-2 justify-between py-2;
+  @apply text-sm;
+  @apply border-b border-gray-200;
+}
+
+.task-line-add {
+  @apply border-transparent text-xs cursor-pointer;
+}
+
+.task-left, .task-right {
+  @apply flex items-center gap-2 text-gray-500;
+}
+
+.task-line-icon {
+  @apply w-5 h-5 cursor-pointer ;
+}
+
 /* Components */
 .btn {
   @apply flex items-center gap-1 px-1.5 py-0.5 rounded-md text-gray-500;
@@ -38,6 +68,6 @@
 }
 
 input[type="text"] {
-  @apply outline-none;
+  @apply outline-none border-transparent text-xs py-0 pl-0;
 }
 
