--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -11,7 +11,7 @@
 }
 
 .project-menu-item{
-  @apply pb-1 hover:text-gray-700 border-b border-transparent cursor-pointer; 
+  @apply pb-1 hover:text-gray-700  border-transparent cursor-pointer; 
 }
 
 .project-actions{
