--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,5 +1,5 @@
 #sidebar {
-  @apply w-[250px] bg-gray-100 border-r border-gray-200 flex-shrink-0;
+  @apply w-[250px] bg-gray-100 border-r border-gray-200 flex-shrink-0 text-sm;
 }
 
 .user-section {
@@ -16,7 +16,7 @@
 
 .menu-item {
   @apply hover:bg-white border border-transparent hover:border-gray-200 rounded-lg cursor-pointer;
-  @apply flex items-center justify-between mx-2 p-2 text-gray-500;
+  @apply flex items-center justify-between mx-2 py-1 px-2 text-gray-600;
 }
 
 .menu-item-add{
@@ -29,10 +29,13 @@
   width: 24px;
 }
 
+.menu-item-add .menu-item-icon{
+  @apply bg-gray-200 w-5 h-5 rounded-full ml-0.5 mr-0.5;
+}
+
 .menu-item-left {
   @apply flex items-center gap-2;
 }
-
 
 .avatar {
   @apply rounded-full inline-block h-8 w-8;
